# GithubActions

./: CMakeLists.txt  CMakeSettings.json  ConsoleApp.sln  conanfile.py
.github/workflows/: analyze-changes.yml  pvs-studio-build-analyze.yml
